<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.temporary</groupId>
    <artifactId>groupdocs-viewer-java-sample</artifactId>
    <version>16.11.0</version>
    <properties>
        <java.version>1.7</java.version>
        <qa.skip.junit>false</qa.skip.junit>
        <groupdocs.viewer>${project.version}</groupdocs.viewer>
        <java.bootstrap.classes>${java.home}/lib/rt.jar</java.bootstrap.classes>
        <java.cryptographic.extension.classes>${java.home}/lib/jce.jar</java.cryptographic.extension.classes>
        <java.secure.socket.extension.classes>${java.home}/lib/jsse.jar</java.secure.socket.extension.classes>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.groupdocs</groupId>
            <artifactId>groupdocs-viewer</artifactId>
            <version>${groupdocs.viewer}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.4</version>
        </dependency>
        <dependency>
            <groupId>com.microsoft.azure</groupId>
            <artifactId>azure-storage</artifactId>
            <version>4.2.0</version>
        </dependency>
        <dependency>
            <groupId>commons-net</groupId>
            <artifactId>commons-net</artifactId>
            <version>3.4</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-java-sdk-s3</artifactId>
            <version>1.11.46</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.3.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>java</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>com.groupdocs.viewer.sample.Main</mainClass>
                    <cleanupDaemonThreads>false</cleanupDaemonThreads>
                    <executable>maven</executable>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <argLine>-Xms1024m -Xmx2048m -XX:MaxPermSize=512m -Dfile.encoding=UTF-8</argLine>
                    <skip>${qa.skip.junit}</skip>
                    <workingDirectory>target/</workingDirectory>
                    <includes>
                        <include>**/**Tests.java</include>
                    </includes>
                    <systemProperties>
                        <test.working.directory>${project.build.directory}\junitworkdirectory\</test.working.directory>
                        <test.resources.directory>${project.build.testSourceDirectory}\..\resources\</test.resources.directory>
                    </systemProperties>
                    <!--<parallel>classes</parallel>-->
                    <!--<threadCount>2</threadCount>-->
                </configuration>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>maven-central</id>
            <url>http://repo1.maven.org/maven2</url>
        </repository>
    </repositories>
</project>